# TryOps

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  commit_msg.txt  docker-compose.yml
.github/workflows/: terraform.yml
apps/esp32_firmware/: README.md  main.cpp  platformio.ini
apps/gcp_etl/: README.md  main.py  pyproject.toml
apps/gcp_etl/ansible/: deploy_etl.yml
apps/gcp_etl/scripts/: tryops_daily.py  tryops_hourly.py  tryops_monthly.py
apps/gcp_etl/src/etl/: bigquery_io.py  session_reconstruction.py
apps/gcp_etl/src/etl/signals/: companion.py  friction.py  hesitation.py
apps/gcp_etl/tests/: test_session.py  test_signals.py
apps/gcp_ingest/: .coverage  Dockerfile  README.md  main.py  pyproject.toml
apps/gcp_ingest/.github/workflows/: deploy-ingest.yml
apps/gcp_ingest/src/ingest/: __init__.py  auth.py  firestore_client.py  handlers.py  main.py  pubsub_client.py
apps/gcp_ingest/tests/: test_firestore.py  test_handlers.py  test_logic.py
apps/gcp_query/: .coverage  Dockerfile  README.md  main.py  pyproject.toml
apps/gcp_query/src/query/: auth.py  bigquery_client.py  config.py  main.py
apps/gcp_query/src/query/routers/: brand.py  store.py
apps/gcp_query/tests/: test_api.py  test_auth.py  test_bigquery.py
apps/stage0_validation/: .coverage  README.md  pyproject.toml  validate.py
apps/stage0_validation/results/: scenario_01_20260602_133217.json  scenario_01_20260602_133236.json  scenario_01_20260602_133311.json  scenario_01_20260602_134431.json  scenario_01_20260602_134511.json  scenario_02_20260602_133236.json  scenario_02_20260602_133311.json  scenario_02_20260602_134431.json  scenario_02_20260602_134511.json  scenario_03_20260602_133236.json  scenario_03_20260602_133311.json  scenario_03_20260602_134431.json  scenario_03_20260602_134511.json  scenario_04_20260602_133236.json  scenario_04_20260602_133311.json  scenario_04_20260602_134431.json  scenario_04_20260602_134511.json  scenario_05_20260602_133236.json  scenario_05_20260602_133311.json  scenario_05_20260602_134432.json  scenario_05_20260602_134511.json
apps/stage0_validation/scripts/: run_stage0_01_occupancy.py  run_stage0_02_hesitation.py  run_stage0_03_dwell_time.py  run_stage0_04_phantom.py  run_stage0_05_noise.py  run_stage0_all.py  run_stage1_simulator.py
apps/stage0_validation/src/stage0/: __init__.py  aggregator.py  csi_collector.py  mmwave_collector.py  rfid_synthesizer.py  signals.py
apps/stage0_validation/src/stage0/scenarios/: scenario_1_occupancy.py  scenario_2_hesitation.py  scenario_3_dwell_time.py  scenario_4_phantom.py  scenario_5_noise.py
apps/stage0_validation/tests/: test_aggregator.py  test_csi_collector.py  test_rfid_synthesizer.py  test_scenarios.py  test_signals.py
apps/store_gateway/: .coverage  Dockerfile  README.md  gateway.db  main.py  pyproject.toml
apps/store_gateway/ansible/: deploy.yml
apps/store_gateway/src/store_gateway/: __init__.py  aggregator.py  config.py  gcp_publisher.py  main.py  mqtt_collector.py  pos_poller.py  rfid_handler.py  storage.py
apps/store_gateway/systemd/: tryops-gateway.service
apps/store_gateway/tests/: test_aggregator.py  test_main.py  test_mqtt_collector.py  test_pos_poller.py  test_publisher.py  test_rfid_handler.py  test_storage.py
apps/web/: package-lock.json  package.json
docs/: ADR-001-sensor-architecture.md  REDESIGN_MASTER_PLAN.md
(+75 files in other folders)
