[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tryops-gcp-etl"
version = "0.1.0"
description = "TryOps Data Warehouse ETL Service using Polars and DuckDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-storage>=2.14.0",
    "db-dtypes>=1.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]
