[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcp-ingest"
version = "0.1.0"
description = "TryOps GCP Cloud Run Ingest Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "google-cloud-pubsub>=2.20.0",
    "google-cloud-firestore>=2.15.0",
    "google-cloud-logging>=3.10.0",
    "tenacity>=8.2.3",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]
