[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tryops-gcp-query"
version = "0.1.0"
description = "TryOps GCP Query API for Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-cloud-bigquery>=3.20.0",
    "firebase-admin>=6.5.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/query"]
