[project]
name = "stage0_validation"
version = "0.1.0"
description = "TryOps Stage 0 Concept Validation for Joint Signals (No physical ESP32 required)"
authors = [
    {name = "TryOps Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stage0"]
