[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "store-gateway"
version = "0.1.0"
description = "TryOps Store Gateway for Raspberry Pi (ESP32 CSI, RFID, POS polling, and GCP Publishing)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0.0",
    "polars>=0.20.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "google-auth>=2.28.0",
    "apscheduler>=3.10.4",
    # Using standard sqlite3 for dev, sqlcipher3 for prod via Docker
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/store_gateway"]
